# goglob

./: Cargo.toml  LICENSE  README.md  deny.toml
goglob/: Cargo.toml
goglob-common/: Cargo.toml  README.md
goglob-common/src/: charcls.rs  error.rs  lib.rs  literal.rs  serde.rs
goglob-proc-macro/: Cargo.toml  README.md
goglob-proc-macro-tests/: Cargo.toml  README.md
goglob-proc-macro-tests/src/: lib.rs
goglob-proc-macro-tests/tests/: 0000-main.rs  01-goglob-gotest-pass.rs  02-goglob-gotest-fail.rs  02-goglob-gotest-fail.stderr
goglob-proc-macro/src/: lib.rs  parse.rs
goglob-proc-macro/src/stream/: charcls.rs  literal.rs  mod.rs
goglob-serde-tests/: Cargo.toml  README.md
goglob-serde-tests/src/: lib.rs
goglob/src/: lib.rs
