[package]
name = "goglob-common"
version = "0.2.0"
description = "Internal library used by goglob, not for public use"
authors = ["Hugo Cuenca <hugo.cuenca.arana@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/hugo-cuenca/goglob/"
repository = "https://github.com/hugo-cuenca/goglob/"
license = "BSD-3-Clause"
exclude = [
    ".idea/*",
]
edition = "2021"

[dependencies]
serde = { version = "1.0.136", optional = true }

[features]
serde = ["dep:serde"]